<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:orientation="vertical"
    android:background="#f0eff5"
    tools:context="com.newland.sunpower.activity.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:background="@color/linearLayout_bg_color"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/textColor"
                android:text="@string/angle1_value" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.newland.sunpower.view.CircleSeekBarX
                    android:id="@+id/angleX_seekbar"
                    android:layout_marginTop="10dp"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_centerInParent="true"
                    android:padding="8dp"
                    app:wheel_pointer_radius="10dp"
                    app:wheel_reached_width="8dp"
                    app:wheel_unreached_width="8dp" />
                <TextView
                    android:id="@+id/angleX_value"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="0°"
                    android:textColor="@color/def_reached_color"
                    android:textSize="@dimen/text_size_20"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/textColor"
                android:text="@string/angle2_value" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.newland.sunpower.view.CircleSeekBarY
                    android:id="@+id/angleY_seekbar"
                    android:layout_marginTop="10dp"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_centerInParent="true"
                    android:padding="8dp"
                    app:wheel_pointer_radius="10dp"
                    app:wheel_reached_width="8dp"
                    app:wheel_unreached_width="8dp" />
                <TextView
                    android:id="@+id/angleY_value"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="0°"
                    android:textColor="@color/def_reached_color"
                    android:textSize="@dimen/text_size_20"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center|top"
        android:layout_marginTop="5dp"
        android:background="@color/linearLayout_bg_color"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/textColor"
                android:text="@string/sensor_value" />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/circle_orange"/>
                <TextView
                    android:id="@+id/light_value_text"
                    android:text="0lx"
                    android:textSize="@dimen/text_size_20"
                    android:textColor="@color/light_value_text_color"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lamp_state_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_16"
                android:textColor="@color/textColor"
                android:text="@string/lamp_close_state" />
            <ImageView
                android:id="@+id/lamp_state_imageView"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/icon_lamp_off"/>
            <ImageView
                android:id="@+id/lamp_control_imageView"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/switch_off"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dddddd"/>
    <Button
        android:id="@+id/query_datas_btn"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/query_datas"
        android:background="@drawable/shape_login_btn_bg"
        android:textSize="@dimen/text_size_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/postResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_gas"
            android:text="请求结果 : "
            android:textIsSelectable="true"/>

    </LinearLayout>
</LinearLayout>